--- a/src/WorkHours/MainWindow.xaml
+++ b/src/WorkHours/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WorkHours"
         mc:Ignorable="d"
-        Title="MainWindow" Height="130" Width="380">
+        Title="MainWindow" Height="130" Width="380" Closing="Window_Closing">
     <Grid Background="#FF3C1313">
         <Button Name="StopButton" Content="||" HorizontalAlignment="Left" Padding="0,-14,0,0"  Margin="10,10,0,0" VerticalAlignment="Top" Height="72" Width="72" Click="StopButton_Click" FontWeight="Bold" FontSize="36" Background="#FFC50C0C" Foreground="#FFEDF0B5"/>
         <Button Name="PlayButton" Content=">" HorizontalAlignment="Left" Padding="0,-12,0,0"  Margin="10,10,0,0" VerticalAlignment="Top" Height="72" Width="72" Click="PlayButton_Click" FontWeight="Bold" FontSize="48" Foreground="#FFEDF0B5" Background="#FF3B8D0C" BorderBrush="#FF3B8D0C"/>
