--- a/src/WorkHours/MainWindow.xaml
+++ b/src/WorkHours/MainWindow.xaml
@@ -5,12 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WorkHours"
         mc:Ignorable="d"
-        Title="MainWindow" Height="130" Width="380" Closing="Window_Closing">
+        Title="MainWindow" Height="135" Width="380" Closing="Window_Closing">
     <Grid Background="#FF3C1313">
-        <Button Name="StopButton" Content="||" HorizontalAlignment="Left" Padding="0,-14,0,0"  Margin="10,10,0,0" VerticalAlignment="Top" Height="72" Width="72" Click="StopButton_Click" FontWeight="Bold" FontSize="36" Background="#FFC50C0C" Foreground="#FFEDF0B5"/>
-        <Button Name="PlayButton" Content=">" HorizontalAlignment="Left" Padding="0,-12,0,0"  Margin="10,10,0,0" VerticalAlignment="Top" Height="72" Width="72" Click="PlayButton_Click" FontWeight="Bold" FontSize="48" Foreground="#FFEDF0B5" Background="#FF3B8D0C" BorderBrush="#FF3B8D0C"/>
-        <ProgressBar Name="WorkDayProgress" Margin="104,10,0,0" Value="20" HorizontalAlignment="Left" Width="250" Height="40" VerticalAlignment="Top" Background="#FFC50C0C" BorderBrush="#FFC50C0C" Foreground="#FF3B8D0C"/>
-        <Label Name="WorkHoursLabel" Content="00:00:00" Padding="0,0,0,0" HorizontalAlignment="Left" HorizontalContentAlignment="Center"  Margin="104,10,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" Foreground="#FFEDF0B5" Width="250" Height="40" FontWeight="Bold" FontSize="24" MouseDoubleClick="WorkHoursLabel_MouseDoubleClick"/>
-        <Label Name="DateLabel" Content="2020.03.02 Csütörtök" Padding="0,00,0,0" HorizontalAlignment="Left" HorizontalContentAlignment="Center"  Margin="104,50,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" Foreground="#FFEDF0B5" Width="251" Height="32" FontWeight="Bold" FontSize="20" MouseDoubleClick="DateLabel_MouseDoubleClick"/>
+        <Button Name="StopButton" Content="||" HorizontalAlignment="Left" Padding="0,-14,0,0"  Margin="10,10,0,0" VerticalAlignment="Top" Height="77" Width="77" Click="StopButton_Click" FontWeight="Bold" FontSize="36" Background="#FFC50C0C" Foreground="#FFEDF0B5"/>
+        <Button Name="PlayButton" Content=">" HorizontalAlignment="Left" Padding="0,-12,0,0"  Margin="10,10,0,0" VerticalAlignment="Top" Height="77" Width="77" Click="PlayButton_Click" FontWeight="Bold" FontSize="48" Foreground="#FFEDF0B5" Background="#FF3B8D0C" BorderBrush="#FF3B8D0C"/>
+        <ProgressBar Name="WorkDayProgress" Margin="104,10,0,0" Value="20" HorizontalAlignment="Left" Width="250" Height="38" VerticalAlignment="Top" Background="#FFC50C0C" BorderBrush="#FFC50C0C" Foreground="#FF3B8D0C"/>
+        <Label Name="WorkHoursLabel" Content="00:00:00" Padding="0,0,0,0" HorizontalAlignment="Left" HorizontalContentAlignment="Center"  Margin="104,10,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" Foreground="#FFEDF0B5" Width="126" Height="38" FontWeight="Bold" FontSize="22" MouseDoubleClick="WorkHoursLabel_MouseDoubleClick"/>
+        <Label Name="DayTypeLabel" Content="Workday" Padding="0,0,0,0" HorizontalAlignment="Left" HorizontalContentAlignment="Center"  Margin="230,10,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" Foreground="#FFEDF0B5" Width="124" Height="38" FontWeight="Bold" FontSize="22" MouseDoubleClick="DayTypeLabel_MouseDoubleClick"/>
+        <Label Name="DateLabel" Content="2020.03.02 Csütörtök" Padding="0,0,0,0" HorizontalAlignment="Left" HorizontalContentAlignment="Center"  Margin="104,48,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" Foreground="#FFEDF0B5" Width="251" Height="39" FontWeight="Bold" FontSize="22"/>
     </Grid>
 </Window>
