--- a/src/WorkHours/MainWindow.xaml
+++ b/src/WorkHours/MainWindow.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WorkHours"
         mc:Ignorable="d"
-        Title="MainWindow" Height="100" Width="380" Closing="Window_Closing">
+        Title="MainWindow" Height="89" Width="380" Closing="Window_Closing">
     <Grid Background="#FF3C1313">
-        <Button Name="StopButton" Content="||" HorizontalAlignment="Left" Padding="0,-10,0,0"  Margin="10,10,0,0" VerticalAlignment="Top" Height="38" Width="77" Click="StopButton_Click" FontWeight="Bold" FontSize="26" Background="#FFC50C0C" Foreground="#FFEDF0B5"/>
-        <Button Name="PlayButton" Content=">" HorizontalAlignment="Left" Padding="0,-20,0,0"  Margin="10,10,0,0" VerticalAlignment="Top" Height="38" Width="77" Click="PlayButton_Click" FontWeight="Bold" FontSize="48" Foreground="#FFEDF0B5" Background="#FF3B8D0C" BorderBrush="#FF3B8D0C"/>
-        <ProgressBar Name="WorkDayProgress" Margin="104,10,0,0" Value="20" HorizontalAlignment="Left" Width="250" Height="38" VerticalAlignment="Top" Background="#FFC50C0C" BorderBrush="#FFC50C0C" Foreground="#FF3B8D0C"/>
-        <Label Name="WorkHoursLabel" Content="00:00:00" Padding="0,0,0,0" HorizontalAlignment="Left" HorizontalContentAlignment="Center"  Margin="104,10,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" Foreground="#FFEDF0B5" Width="126" Height="38" FontWeight="Bold" FontSize="22" MouseDoubleClick="WorkHoursLabel_MouseDoubleClick"/>
-        <Label Name="DayTypeLabel" Content="Workday" Padding="0,0,0,0" HorizontalAlignment="Left" HorizontalContentAlignment="Center"  Margin="230,10,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" Foreground="#FFEDF0B5" Width="124" Height="38" FontWeight="Bold" FontSize="22" MouseDoubleClick="DayTypeLabel_MouseDoubleClick"/>
-        <TextBox Name="StatisticsTextBox" HorizontalAlignment="Center" Padding="10" Margin="0,62,0,10" IsReadOnly="True" Text="Statistics" TextWrapping="Wrap" Width="343" FontFamily="Consolas" FontSize="16" Foreground="#FFEDF0B5" Background="#FF3C1313" BorderBrush="{x:Null}" MouseDoubleClick="StatisticsTextBox_MouseDoubleClick"/>
+        <Button Name="StopButton" Content="||" HorizontalAlignment="Left" Padding="0,-7,0,0"  Margin="10,10,0,0" VerticalAlignment="Top" Height="30" Width="77" Click="StopButton_Click" FontWeight="Bold" FontSize="22" Background="#FFC50C0C" Foreground="#FFEDF0B5"/>
+        <Button Name="PlayButton" Content=">" HorizontalAlignment="Left" Padding="0,-20,0,0"  Margin="10,10,0,0" VerticalAlignment="Top" Height="30" Width="77" Click="PlayButton_Click" FontWeight="Bold" FontSize="43" Foreground="#FFEDF0B5" Background="#FF3B8D0C" BorderBrush="#FF3B8D0C"/>
+        <ProgressBar Name="WorkDayProgress" Margin="104,10,0,0" Value="20" HorizontalAlignment="Left" Width="250" Height="30" VerticalAlignment="Top" Background="#FFC50C0C" BorderBrush="#FFC50C0C" Foreground="#FF3B8D0C"/>
+        <Label Name="WorkHoursLabel" Content="00:00:00" Padding="0,0,0,0" HorizontalAlignment="Left" HorizontalContentAlignment="Center"  Margin="104,10,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" Foreground="#FFEDF0B5" Width="126" Height="30" FontWeight="Bold" FontSize="20" MouseDoubleClick="WorkHoursLabel_MouseDoubleClick"/>
+        <Label Name="DayTypeLabel" Content="Workday" Padding="0,0,0,0" HorizontalAlignment="Left" HorizontalContentAlignment="Center"  Margin="230,10,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" Foreground="#FFEDF0B5" Width="124" Height="30" FontWeight="Bold" FontSize="20" MouseDoubleClick="DayTypeLabel_MouseDoubleClick"/>
+        <TextBox Name="StatisticsTextBox" HorizontalAlignment="Left" Padding="10" Margin="11,51,0,21" IsReadOnly="True" Text="Statistics" TextWrapping="Wrap" Width="343" FontFamily="Consolas" FontSize="16" Foreground="#FFEDF0B5" Background="#FF3C1313" BorderBrush="{x:Null}" MouseDoubleClick="StatisticsTextBox_MouseDoubleClick"/>
     </Grid>
 </Window>
